# qna-support-retrieve

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: health_routes.py  qa_routes.py
app/core/: auth.py  config.py  database.py  error_handlers.py  exceptions.py
app/models/: database.py  schemas.py
app/services/: embeddings.py  llm_client.py  qa_service.py  qdrant.py
