[project]
name = "qna-support-retriever"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.15.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.42",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0"
]
